text align fixed

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,10 @@ p {
     .github-div {
         padding-top: 2vh;
     }
+
+    p {
+        text-align: initial;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -69,6 +73,11 @@ p {
     .github-div {
         padding-top: 2vh;
     }
+
+    p {
+        text-align: initial;
+    }
+
 }
 
 @media only screen and (min-width: 2281px) {
